--- a/src/frontend/js/components/organisms/Hero/Hero.css
+++ b/src/frontend/js/components/organisms/Hero/Hero.css
@@ -1,9 +1,4 @@
-.hero {
-  margin-bottom: var(--gutter-l);
-}
-
 .hero__main {
-  composes: hero;
   height: 400px;
   width: 100%;
   margin-bottom: var(--gutter-l);
