--- a/src/frontend/js/components/themes/helpers.css
+++ b/src/frontend/js/components/themes/helpers.css
@@ -7,3 +7,7 @@
   position: absolute;
   width: 1px;
 }
+
+.nowrap {
+  white-space: nowrap;
+}
